<resources>
    <string name="app_name">Calendar</string>
    <string name="current_date">JUNE</string>
    <string name="sun">DOM</string>
    <string name="mon">LUN</string>
    <string name="tue">MAR</string>
    <string name="wed">MER</string>
    <string name="thu">GIO</string>
    <string name="fri">VEN</string>
    <string name="sat">SAB</string>
    <string name="last_date">30</string>
</resources>
