<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_custom_calendar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0291B7"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingTop="19dp"
        android:paddingBottom="8dp">


        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding"
            android:src="@drawable/ic_arrow_left_white_36dp"/>

        <TextView
            android:id="@+id/display_current_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/arialbd"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding"
            android:src="@drawable/ic_arrow_right_white_36dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0291B7"
        android:orientation="horizontal"
        android:paddingTop="6dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/helveticabold"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/helveticabold"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/helveticabold"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/helveticabold"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/helveticabold"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/helveticabold"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/helveticabold"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>






    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="7"
        android:scrollbars="vertical"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:visibility="visible"/>


</LinearLayout>